@@ -1,3 +1,9 @@
+2009-07-28  Daiki Ueno  <ueno@unixuser.org>
+
+	* extconf.rb: check ruby/st.h for ruby 1.9.
+
+	* usb.c: prefer ruby/st.h over st.h.
+
 2008-04-12  Tanaka Akira  <akr@fsij.org>
 
 	* ruby-usb 0.2 released.
